# thesis-code

./: .gitattributes  .gitignore  .pre-commit-config.yaml  EDGE_IMPULSE_QUICK_START.md  EDGE_IMPULSE_TRAINING_GUIDE.md  README.md  SNN_CONVERSION_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md  __init__.py  run_benchmark.py
benchmark/tests/: __init__.py  test_agents.py  test_pmsm_env.py
data-preperation/: README.md  data_exploration.ipynb  main.py  merge_simulation_data.py  prepare_edge_impulse.py  requirements.txt
docs/: ARCHITECTURE.md  BENCHMARK_METRICS.md  CONTROLLER_VERIFICATION.md  DATA_GENERATION.md  EDGE_IMPULSE_GUIDE.md  EDGE_IMPULSE_REGRESSION_FIX.md  GEM_KONFIGURATION.md  GEM_LEARNINGS.md  GEM_SIMULATION.md  IMPLEMENTATION_CHECKLIST.md  README.md  SIMULATION.md  TRAINING_GUIDE.md  WORK_PROGRESS.md
docs/archive/: CONTROLLER_VERIFICATION.md  DATA_GENERATION.md  EDGE_IMPULSE_GUIDE.md  EDGE_IMPULSE_REGRESSION_FIX.md  GEM_KONFIGURATION.md  GEM_LEARNINGS.md  TRAINING_GUIDE.md
metrics/: METRICS_DOCUMENTATION.md  __init__.py  benchmark_metrics.py  test_metrics.py
metrics/tests/: __init__.py  test_accuracy.py  test_dynamics.py
pmsm-matlab/: README.md  foc_pmsm.slx  foc_pmsm.slx.r2024b  pmsm_init.m  pmsm_operating_points.m  pmsm_validation_compare.m
pmsm-pem/: README.md  VERGLEICH_MATLAB.md  compare_simulations.py  requirements.txt  simulate_pmsm.py  simulate_pmsm_matlab_match.py
pmsm-pem/benchmark/: agents.py  pmsm_env.py  processors.py  run_benchmark.py
pmsm-pem/docs/: GEM_Zusammenfassung.md
pmsm-pem/metrics/: test_metrics.py
pmsm-pem/simulation/: run_operating_point_tests.py  simulate_pmsm.py  simulate_pmsm_matlab_match.py
pmsm-pem/validation/: compare_operating_points.py  compare_simulations.py  debug_script.py
tests/: __init__.py  conftest.py  test_integration.py  test_regression.py
utils/: __init__.py  reproducibility.py
