[tool.poetry]
name = "pmsm-neuromorphic-benchmark"
version = "0.1.0"
package-mode = false
description = "Neuromorphic controller benchmark for PMSM current control using NeuroBench"
readme = "README.md"
authors = ["Jonas <jonas@example.com>"]
license = "MIT"
keywords = [
    "neuromorphic",
    "spiking-neural-network",
    "pmsm",
    "motor-control",
    "benchmark",
    "neurobench",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core scientific computing
numpy = ">=2.0.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
matplotlib = ">=3.7.0"

# GEM (gym-electric-motor) simulation
gym-electric-motor = ">=3.0.0"
gymnasium = ">=0.29.0"

# Deep learning
torch = ">=2.0.0"
snntorch = ">=0.9.0"

# Data processing
pyarrow = ">=12.0.0"
seaborn = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-xdist = ">=3.3.0"

# Linting and formatting
black = ">=24.0.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"

# Type stubs
pandas-stubs = ">=2.0.0"
types-PyYAML = ">=6.0.0"

# Pre-commit hooks
pre-commit = ">=3.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=2.0.0"
myst-parser = ">=2.0.0"

[tool.poetry.group.jupyter.dependencies]
jupyter = ">=1.0.0"
ipykernel = ">=6.25.0"
ipython = ">=8.0.0"

# Not using package mode - no build system or scripts needed

# =============================================================================
# Tool Configurations
# =============================================================================

# -----------------------------------------------------------------------------
# Black - Code Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.eggs
    | build
    | dist
    | pmsm-matlab
    | data-preperation/venv
    | pmsm-pem/venv
)/
'''

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".eggs",
    "build",
    "dist",
    "pmsm-matlab",
    "data-preperation/venv",
    "pmsm-pem/venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ARG001",  # unused function argument (common in callbacks)
    "ARG002",  # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG"]
"**/test_*.py" = ["PLR2004", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["benchmark", "metrics"]

# -----------------------------------------------------------------------------
# Mypy - Static Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Gradually enable stricter checks
disallow_untyped_defs = false
disallow_incomplete_defs = false

exclude = [
    "venv",
    "pmsm-matlab",
    "data-preperation/venv",
    "pmsm-pem/venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "gym_electric_motor.*",
    "gymnasium.*",
    "snntorch.*",
    "neurobench.*",
    "gem_controllers.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
    "benchmark/tests",
    "metrics/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests",
    "gpu: marks tests requiring GPU",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["benchmark", "metrics"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
