[tool.poetry]
name = "pmsm-neuromorphic-benchmark"
version = "0.1.0"
package-mode = false
description = "Neuromorphic controller benchmark for PMSM current control"
readme = "README.md"
authors = ["Jonas <jonas@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core scientific computing
numpy = ">=2.0.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
matplotlib = ">=3.7.0"

# GEM (gym-electric-motor) simulation
gym-electric-motor = ">=3.0.0"
gymnasium = ">=0.29.0"

# Deep learning
torch = ">=2.0.0"
snntorch = ">=0.9.0"

# Data processing
pyarrow = ">=12.0.0"
seaborn = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"

[tool.poetry.group.jupyter.dependencies]
jupyter = ">=1.0.0"
ipykernel = ">=6.25.0"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "benchmark/tests", "metrics/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
